# jira-ai-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  board_ids.txt  install-macos.sh  launchctl unload ~:Library:LaunchAgents:com.sprint  pyproject.toml  requirements.txt  run_streamlit.sh  run_streamlit_ai.sh  ui_app.py  ui_app_ai.py
.streamlit/: config.toml
agent/: board_ids.py  cli.py  config.py  graph.py  llm.py  tools.py
scripts/: fetch_all_team_sprint_details.sh  fetch_customer_outcomes.sh  fetch_sprint_details.sh  push_to_miro.sh  push_to_miro_cards.sh
